[New] Generate links to rerun module with same inputs
The links are generated in logs so one can execute the module with inputs from previous run.